@@ -26,8 +26,6 @@ void test1() {
 	model(1)->setTutor(std::make_unique<SimpleTutor<T>>(0.1));
 
 	for(int i=0; i<10000; i++) {
-	    model.setMode(ANN<T>::TrainMode);
-
 	    model.batchBegin();
 
 	    model.setInput(0, 0.0);
@@ -49,7 +47,6 @@ void test1() {
 	    model.batchEnd();
 
 	};
-	model.setMode(ANN<T>::WorkMode);
 	model.setInput(0, 0.0);
 	model.setInput(1, 1.0);
 	model.forward();
