@@ -18,3 +18,9 @@
 * добавлен класс SoftMax и юнит-тест для него;
 * исправлен конструктор в ANN;
 
+* удалены методы ANN::setMode()/getMode() как нефункциональные;
+* еще несколько методов ANN стали чисто-виртуальными. Это немного раздувает код дочерних классов, за то улучашает читабельность;
+* методы Learnable::batchBegin()/batchEnd() теперь final;
+* добавлена разметка Doxygen в ANN.hpp;
+
+
